added performance graph

--- a/report.tex
+++ b/report.tex
@@ -80,7 +80,7 @@ The current construction is thread safe: The last thread in the loop can not lea
 
 \begin{figure}
 \centering
-%\includegraphics[width=\textwidth]{perform.png}
+\includegraphics[width=\textwidth]{perform.pdf}
 \caption{\textit{This figure shows the execution time in relation to number of threads.}}
 \label{fig:perform}
 \end{figure}
